--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
         </dependency>
 
 
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
